kubernetes-manifests/monitoring/prometheus/cadvisor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadvisor
  labels:
    app: cadvisor
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: cadvisor
