kubernetes-manifests/monitoring/prometheus/prometheus-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  entryPoints:
    - web-secure
  routes:
    - kind: Rule
      match: Host(`prometheus.dtlp.cc`)
      services:
        - name: prometheus
          kind: Service
          port: 9090
  tls: {}
